--- a/host/res/mainwindow.ui
+++ b/host/res/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>440</width>
-    <height>472</height>
+    <height>655</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,7 +20,7 @@
       <x>0</x>
       <y>0</y>
       <width>441</width>
-      <height>473</height>
+      <height>666</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
@@ -40,18 +40,11 @@
       <number>30</number>
      </property>
      <item>
-      <layout class="QHBoxLayout" name="horizontalLayout_2">
-       <item>
-        <widget class="QLineEdit" name="ExeTextField"/>
-       </item>
-       <item>
-        <widget class="QPushButton" name="ChooseButton">
-         <property name="text">
-          <string>Choose</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Port Selection:</string>
+       </property>
+      </widget>
      </item>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout">
@@ -66,6 +59,23 @@
         <string>Refresh</string>
        </property>
       </widget>
+     </item>
+     <item>
+      <widget class="Line" name="line">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="label_2">
+       <property name="text">
+        <string>Memory Information</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QListWidget" name="memoryList"/>
      </item>
      <item>
       <layout class="QHBoxLayout" name="InfoHLayout">
@@ -151,6 +161,34 @@
         <string>Obtain Information</string>
        </property>
       </widget>
+     </item>
+     <item>
+      <widget class="Line" name="line_2">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="label_3">
+       <property name="text">
+        <string>Load Target Application</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout_2">
+       <item>
+        <widget class="QLineEdit" name="ExeTextField"/>
+       </item>
+       <item>
+        <widget class="QPushButton" name="ChooseButton">
+         <property name="text">
+          <string>Choose</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </item>
      <item>
       <widget class="QPushButton" name="loadBinButton">
